# jasmin-web-panel

./: .dockerignore  .env_local  .gitignore  .pre-commit-config.yaml  .travis.yml  000-default.conf  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  FUNDING.yml  Makefile  README.md  SECURITY.md  Sample.env  WithoutStatusJasminService  celery_run.sh  deploy.py  django.wsgi  docker-compose-alpine.yml  docker-compose.yml  docker-entrypoint.sh  index.html  load_data.sh  load_data_win.bat  local-docker-compose.yml  manage.py  mkdocs.yml  nginx.conf  pyproject.toml  rabbitmq.conf  requirements.pip  requirements.txt  run_cherrypy.py  sample.env  sitemap.xml  sms_logger.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  publish_docs.yml
config/: asgi.py  celery.py  routing.py  urls.py  wsgi.py
config/docker/alpine/: Dockerfile  docker-compose-alpine.yml
config/docker/jasmin/: README.md  docker-compose.yml
config/docker/postgres/: init.sql
config/docker/slim/: Dockerfile  docker-entrypoint-celery.sh  docker-entrypoint.sh
config/docker/sms_logger/: Dockerfile  docker-entrypoint.sh  requirements.txt  sms_logger.py
config/locale/: README.md
config/settings/: com.py  dev.py  pro.py
deployment/docker/: index.html
deployment/docker/slim-buster/: Dockerfile
deployment/kubernetes/: index.html
deployment/nginx/: nginx.conf
deployment/supervisor/: celery.conf  daphne.conf  gunicorn.conf
deployment/systemctl/: README.md  djangoaio-celery.service  djangoaio-celerybeat.service  djangoaio-daphne.service  djangoaio-gunicorn.service
deployment/systemd-nginx/: index.html
docs/: README.md  index.md  support.md
docs/deployment/: docker.md  kubernetes.md  systemd-nginx.md
docs/features/: rest-api.md  submit-log.md
docs/getting-started/: configuration.md  installation.md
features/rest-api/: index.html
features/submit-log/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
logs/: .gitignore  clean.sh
main/: local_settings.py  settings.py  urls.py  wsgi.py
main/api/: __init__.py  apps.py  urls.py
main/api/views/: __init__.py  filters.py  groups.py  health_check.py  httpccm.py  morouter.py  mtrouter.py  root.py  schema.py  smppccm.py  users.py
main/apps/account/: urls.py
main/apps/administration/: urls.py
main/apps/core/: admin.py  exceptions.py  middleware.py  models.py  tools.py
main/core/: __init__.py  apps.py  context_processors.py  exceptions.py  middleware.py  tools.py
main/core/admin/: __init__.py  activity_log.py  adminsite.py  currency.py  emailserver.py  submit_log.py  tokenizer.py
main/core/mailer/: __init__.py  mail_modules.py
main/core/migrations/: 0001_initial.py  0002_auto_20200503_1639.py  0002_auto_20200512_0721.py  0002_auto_20200512_0812.py  0002_auto_20200515_0727.py  (+2 more)
main/locale/: README.md
main/notify/: __init__.py  apps.py  livecast.py  routing.py  signals.py  urls.py
main/taskapp/: __init__.py  apps.py  celery.py
main/templates/: base.html
main/users/: __init__.py  apps.py  middleware.py  urls.py
main/views/: home.py
main/web/: forms.py  helpers.py  urls.py
scripts/: base.txt  development.txt  production.txt
search/: search_index.json
support/: index.html
tests/: conftest.py  test_api.py  test_core_models.py  test_core_utils.py  test_web_views.py
(+184 files in other folders)
