[build-system]  
requires = ["setuptools", "wheel", "uv"]
build-backend = "setuptools.build_meta"

[project]
name = "jasmin-web-panel"
version = "3.0.3"
description = "A web panel for Jasmin SMS Gateway"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.3,<6.0",
    "django>=5.2,<6.0",
    "django-jet-reboot>=1.3.10,<2.0",
    "django-autoslug>=1.9.8,<2.0",
    "django-environ>=0.12.0,<0.13.0",
    "djangorestframework>=3.13.1,<4.0",
    "pexpect>=4.8.0,<5.0",
    "pillow>=12.0.0,<13.0",
    "python-dateutil>=2.9.0.post0,<3.0",
    "requests>=2.32.3,<3.0",
    "ua-parser>=1.0.1,<2.0",
    "user-agents>=2.2.0,<3.0",
    "tablib>=3.0.0,<4.0",
    "xlrd>=2.0.1,<3.0",
    "xlwt>=1.3.0,<2.0",
    "openpyxl>=3.1.0,<4.0",
    "zipp>=3.8.0,<4.0",
    "smpplib>=2.2.4,<3.0",
    "psycopg[binary]>=3.1.8,<4.0",
]

[project.optional-dependencies]
"dev" = [
    "django-upgrade>=1.24.0,<2.0"
]
"prod" = [
    "gunicorn>=23.0.0,<24.0",
    "uvicorn>=0.34.1,<0.35.0"
]

