[build-system]  
requires = ["setuptools", "wheel", "uv"]
build-backend = "setuptools.build_meta"

[project]
name = "jasmin-web-panel"
version = "3.0.3"
description = "A web panel for Jasmin SMS Gateway"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.3,<6.0",
    "django>=5.2,<6.0",
    "django-jet-reboot>=1.3.10,<2.0",
    "django-autoslug>=1.9.8,<2.0",
    "django-environ>=0.12.0,<0.13.0",
    "djangorestframework>=3.13.1,<4.0",
    "pexpect>=4.8.0,<5.0",
    "pillow>=12.0.0,<13.0",
    "python-dateutil>=2.9.0.post0,<3.0",
    "requests>=2.32.3,<3.0",
    "ua-parser>=1.0.1,<2.0",
    "user-agents>=2.2.0,<3.0",
    "tablib>=3.0.0,<4.0",
    "xlrd>=2.0.1,<3.0",
    "xlwt>=1.3.0,<2.0",
    "openpyxl>=3.1.0,<4.0",
    "zipp>=3.8.0,<4.0",
    "smpplib>=2.2.4,<3.0",
    "psycopg[binary]>=3.1.8,<4.0",
]

[project.optional-dependencies]
"dev" = [
    "django-upgrade>=1.24.0,<2.0",
    "pytest>=8.0.0,<9.0",
    "pytest-django>=4.8.0,<5.0",
    "ruff>=0.4.0,<1.0",
]
"prod" = [
    "gunicorn>=23.0.0,<24.0",
    "uvicorn>=0.34.1,<0.35.0"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
exclude = [
    "*/migrations/*",
    "env/",
    ".git/",
    "__pycache__/",
]

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"config/asgi.py" = ["E402"]
"config/celery.py" = ["E402"]
"config/settings/*.py" = ["F403", "F405"]  # Star imports are Django settings pattern
"config/routing.py" = ["F401", "W191", "E101"]  # Legacy file with tabs/mixed indentation
"main/**/__init__.py" = ["F401", "F403"]  # Re-exports and star imports in __init__ modules
"main/users/views/profile.py" = ["E722"]  # Bare except in legacy code
"main/users/urls.py" = ["F403", "F405"]  # Star imports from views/__init__.py
"main/web/urls.py" = ["F405"]  # Star imports from views/__init__.py
"main/**/*.py" = ["W293", "W191"]  # Whitespace and tabs in legacy code
"main/api/views/*.py" = ["W293"]  # Whitespace in API view docstrings
"main/core/smpp/*.py" = ["E741"]  # Ambiguous variable names in legacy SMPP code
"main/core/utils/boolean.py" = ["E722"]  # Bare except in legacy utility code

